Fixed color contrast issue on button

--- a/css/style.css
+++ b/css/style.css
@@ -43,7 +43,7 @@ footer {
 }
 
 .btn2 {
-    background: #4E87A0;
+    background: #333F48;
     color: #fff;
 }
 
